Fix alignment of empty file revision

--- a/app/stylesheets/builtin-pages/components/archive-comparison.less
+++ b/app/stylesheets/builtin-pages/components/archive-comparison.less
@@ -130,10 +130,7 @@
 
     p {
       color: @color-text;
-      margin: 0 0 0 35px;
       font-size: .85rem;
-      max-width: 500px;
-      max-width: ~"calc(100% - 230px)";
 
       &:last-child {
         margin-bottom: 0;
